use java streams instead of FluentIterable + add calendar service test